--- a/manifest.json
+++ b/manifest.json
@@ -35,5 +35,13 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
+  },
+  "browser_specific_settings": {
+  "gecko": {
+    "id": "gethismail@duck.com",
+    "strict_min_version": "58.0"
   }
+}
+
+
 }
