Running script on url change

--- a/manifest.json
+++ b/manifest.json
@@ -35,5 +35,8 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
+  },
+  "background": {
+    "service_worker": "scripts/background.js"
   }
 }
