--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Youtube Shorts Block",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "An Open-Source Extension that Blocks YouTube Shorts.",
   "permissions": [
     "tabs",
@@ -37,9 +37,12 @@
     }
   },
   "browser_specific_settings": {
-  "gecko": {
-    "id": "gethismail@duck.com",
-    "strict_min_version": "58.0"
+    "gecko": {
+      "id": "gethismail@duck.com",
+      "strict_min_version": "58.0"
+    }
+  },
+  "background": {
+    "service_worker": "scripts/background.js"
   }
-}
 }
